[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://GUI/fontes/pixelart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/scripts/tela_inicial.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="tela_inicial" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.105882, 0.321569, 1 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 231, 136 )
scale = Vector2( 8, 8 )
frames = SubResource( 4 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 25, 55 )
rotation = 0.345575
scale = Vector2( 8, 8 )
frames = SubResource( 2 )
flip_h = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 285, 71 )
scale = Vector2( 8, 8 )
frames = SubResource( 7 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 61, 122 )
scale = Vector2( 8, 8 )
frames = SubResource( 9 )
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 275, 135 )
scale = Vector2( 8, 8 )
frames = SubResource( 11 )

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
position = Vector2( 223, 168 )
scale = Vector2( 8, 8 )
frames = SubResource( 13 )

[node name="AnimatedSprite8" type="AnimatedSprite" parent="."]
position = Vector2( 142, 129 )
scale = Vector2( 8, 8 )
frames = SubResource( 13 )

[node name="AnimatedSprite9" type="AnimatedSprite" parent="."]
position = Vector2( 213, 93 )
scale = Vector2( 8, 8 )
frames = SubResource( 13 )

[node name="AnimatedSprite10" type="AnimatedSprite" parent="."]
position = Vector2( 165, 92 )
scale = Vector2( 8, 8 )
frames = SubResource( 13 )

[node name="AnimatedSprite11" type="AnimatedSprite" parent="."]
position = Vector2( 110, 77 )
scale = Vector2( 8, 8 )
frames = SubResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -43.0
margin_right = 132.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 264.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 14 )
text = "ECHOES OF THE APOCALYPSE"

[node name="play" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 15 )
text = "PLAY"
flat = true

[node name="options" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 264.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 15 )
text = "OPTIONS"
flat = true

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 264.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 15 )
text = "EXIT"
flat = true

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
